* added postroll. * added countdown. * added loading message. * fixed bug for iOS Safari touch identifiers potentially too big for java int. * TODO multiple cues support

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -49,7 +49,7 @@ body {
      top: 35%;*/
 }
 
-#preroll {
+#preroll, #postroll,#countdown {
     position:relative;
     /*width:1200px;
     height:800px;*/
@@ -57,19 +57,19 @@ body {
    /* vertical-align:middle;*/
 }
 
-#preroll p {
+#preroll p, #postroll p,#countdown p {
     text-transform: uppercase;
     color:white;
     text-align:center;
     font-size:35px;
 }
 
-#preroll p.appTitle {
+#preroll p.title, #postroll p.title , #countdown p{
     font-size:50px;
 }
 
 
-#preroll .buttons {
+#preroll .buttons,#postroll .buttons {
 /*    position:absolute;
     top:70%;
     left:20%;
@@ -77,6 +77,21 @@ body {
     text-align:center;
 }
 
-#postroll {
+#postroll,#countdown {
     display:none;
+}
+
+#loadingMsg {
+    display:none;
+    margin-top:20%;
+    text-transform: uppercase;
+    color:white;
+    text-align:center;
+    font-size:35px;
+    /*z-index:99;*/
+}
+
+video.minimised {
+    height:1px;
+    width:1px;
 }
